welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: not found: value faireCarre16
faireCarre16()
^PatternPicture:5: error: not found: value fe
fe faireCarre16() {
^